# Bitsy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
apps/: CMakeLists.txt  ads_programm.cpp  input_generator.cpp
apps/util/: io.cpp  io.hpp  query.hpp  timer.hpp
benchmarks/: CMakeLists.txt  bitvector_access_benchmark.cpp  bitvector_rank_benchmark.cpp  bitvector_select_benchmark.cpp  word_select_benchmark.cpp
bitsy/: CMakeLists.txt  bitvector.hpp  type_traits.hpp
bitsy/rank/: naive_rank.hpp  two_layer_rank_combined_bitvector.hpp
bitsy/select/: naive_select.hpp  two_layer_select.hpp  word_select.hpp
bitsy/util/: math.hpp  static_vector.hpp
tests/: CMakeLists.txt  bitvector_access_test.cpp  bitvector_rank_test.cpp  bitvector_select_test.cpp  bitvector_util.hpp
